--- a/views/post.ejs
+++ b/views/post.ejs
@@ -30,7 +30,7 @@
 
     <div class="mt-5">
       <h2>Add a Comment</h2>
-      <form action="/comment/createComment/<%=post._id%>" method="POST">
+      <form action="/comment/createComment/<%=post.id%>" method="POST">
         <div class="mb-3">
             <label for="title" class="form-label">Comment</label>
             <input type="text" class="form-control" id="comment" name="comment">
